--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Lewis 다양한 저장소
+title: Lewis Tech Blog
 subtitle: 새로운 이슈에 설레는 개발자를 위해
 description:
 author: Lewis Hyeonwoo Lim
